ikiwiki (3.08) UNRELEASED; urgency=low

  * git: Fix utf-8 encoding of author names.

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Mar 2009 14:00:21 -0400

ikiwiki (3.07) unstable; urgency=low
 
  * Updated German translation (Kai Wasserbäch). Closes: #518377
  * Updated French translation (Jean-Luc Coulon). Closes: #518510
  * wmd: New plugin contributed by William Uther to support the WMD
    Wysiwym markdown editor.
  * smiley: Avoid infinite loop in smiley expansion triggered
    by the template scan mode change in version 3.05. Closes: #518805
  * template: When loading a template in scan mode, let preprocess
    know it only needs to scan.

 -- Joey Hess <joeyh@debian.org>  Sun, 08 Mar 2009 19:00:46 -0400

ikiwiki (3.06) unstable; urgency=low

  * Setup automator: Fix bug in password comparison. Closes: #517654

 -- Joey Hess <joeyh@debian.org>  Sun, 01 Mar 2009 15:02:30 -0500

ikiwiki (3.05) unstable; urgency=low

  * debhelper v7(.0.50); rules file minimisation.
  * template: Load templates in scan mode.
    This is potentially expensive, but is necessary so that meta and tag
    directives, and other links on templates affect the page using the
    template reliably.
  * goto: Fix redirect to comments.
  * Add noextension parameter to htmlize hooks to support, eg, Makefile.
  * Add tagged() PageSpec.
  * Updated German translation (Kai Wasserbäch). Closes: #516770
  * Setup automator: Prompt for password twice. Closes: #516973
  * bzr: Add missing rcs_diff. (liw)
  * comments: Avoid showing comment moderation button in prefs to non-admins.
  * goto: Fix typo that broke recentchanges_link compatibility.

 -- Joey Hess <joeyh@debian.org>  Fri, 27 Feb 2009 15:48:39 -0500

ikiwiki (3.04) unstable; urgency=low

  * 404: New plugin which lets you use the IkiWiki CGI script as
    an Apache 404 handler, to give the behaviour of various other wiki
    engines where visiting a nonexistent page provides you with a link
    to create it. (smcv)