@@ -1,6 +1,8 @@
 ikiwiki (3.08) UNRELEASED; urgency=low
 
   * git: Fix utf-8 encoding of author names.
+  * git: Manually decode git output from utf-8, avoids
+    warning messages on invalidly encoded output.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 09 Mar 2009 14:00:21 -0400
 
